--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -7,8 +7,8 @@
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent" android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <EditText
             android:layout_width="match_parent"
@@ -22,49 +22,46 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnAdd"
-                style="@android:style/Widget.Button"
                 android:layout_width="@dimen/btnSize"
                 android:layout_height="@dimen/btnSize"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
+                android:text="@string/newCategory"
                 android:drawableTop="@drawable/tag_text_outline"
-                android:text="@string/newCategory" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                style="@android:style/Widget.Button" />
 
             <Button
                 android:id="@+id/btnSave"
-                style="@android:style/Widget.Button"
                 android:layout_width="@dimen/btnSize"
                 android:layout_height="@dimen/btnSize"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal"
+                android:text="@string/save_category"
                 android:drawableTop="@android:drawable/ic_menu_save"
-                android:text="@string/save_category" />
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center_horizontal"
+                style="@android:style/Widget.Button"
+                android:layout_centerHorizontal="true" />
 
 
             <Button
                 android:id="@+id/btnDelete"
-                style="@android:style/Widget.Button"
                 android:layout_width="@dimen/btnSize"
                 android:layout_height="@dimen/btnSize"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
                 android:layout_gravity="right"
+                android:text="@string/delete_category"
+                style="@android:style/Widget.Button"
                 android:drawableTop="@android:drawable/ic_menu_delete"
-                android:text="@string/delete_category" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true" />
 
         </RelativeLayout>
         <ListView
-            android:id="@+id/lvCategories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/lvCategories"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
             bind:items="@{categories.ItemList}"
             />
-
-
-
     </LinearLayout>
 </layout>
