--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -25,4 +25,11 @@
         android:text="Dummy Text"
         android:textSize="18sp" />
 
+    <ImageView
+        android:id="@+id/doneIcon"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignEnd="@+id/tvText" />
+
 </RelativeLayout>
