--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,8 +14,14 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_show_done"
-        android:orderInCategory="103"
+        android:orderInCategory="102"
         android:title="@string/action_show_done"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/aboutme"
+        android:orderInCategory="103"
+        android:title="@string/aboutme"
         app:showAsAction="never" />
 
 </menu>
