--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#E64A19</color>
-    <color name="colorAccent">#607D8B</color>
+    <color name="colorAccent">#879aa3</color>
     <color name="colorIcons">#727272</color>
 
 </resources>
